-issue#5354: Realtime graphs can report undefined variable
-issue#5355: SNMP Uptime is not always ignored for spikekills
-issue#5356: Improve downed Device detection
-issue#5360: Plugin missing functions warning should be debounced
-issue#5364: Cactid, on initial startup reports that the database connection went away which is erroneous
-issue#5366: RRDcheck does not log using proper case
-issue#5372: PHP configuration file may not have expected settings
-issue#5376: Auth attempts to check for a user lockout when there is no user
-issue#5377: When attempting to edit a tree, the search filter for Graphs remains disabled
-feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
-feature: Upgrade billboard.js to version 3.7.4
-feature: Upgrade d3.js to version 7.8.2
-feature: Upgrade ua-parser.js to version 1.0.35

1.2.24
-issue#5127: Unable to import Local Linux Machine template
-issue#5134: Maximum Memory shows -1 instead of Unlimited
-issue#5135: RRDcleaner and RRDcheck share the same filter details causing errors
-issue#5136: When passed a null value, number_format_i18n() can return a invalid number by ddb4github
-issue#5137: When attempting to update structured paths, SQL errors can occur
-issue#5140: Compatibility changes for SNMP under PHP 8.2
-issue#5142: Fix issues with permission model and warnings
-issue#5143: When a Device has zero Graphs or Data Sources, it does not display a value
-issue#5145: Changing SNMP settings to None leaves Bulk Walk Maximum Repititions visible
-issue#5147: Language handlers may not always be loaded properly
-issue#5150: Wrong parameters are shown for the Import Package script
-issue#5151: Templates appear to lose their suggested name values
-issue#5159: When editing a tree, the tree can not be set to published
-issue#5160: Translations on debian 'bookworm' systems may cause server errors
-issue#5161: Switching language in the settings does not immediately become active